# gutachter

./: Makefile.am  NEWS  README  autogen.sh  configure.ac
gutachter/: Makefile.am  gedit-gutachter-plugin.c  gedit-gutachter-plugin.h  gutachter.gedit-plugin.desktop.in
po/: POTFILES.in
